Tests/a1/reject/19.ul
int main (int x) {
	'aa';
}